--- a/index.html
+++ b/index.html
@@ -21,111 +21,72 @@
         <div class="block">
           <div class="profile">
             <img src="images/profile.jpg" alt="profile photo" />
-            <h1>Alex Hyett | Developer</h1>
+            <h1>Barbara Populaire | Ostéopathe D.O</h1>
             <div class="location">
-              <i class="fas fa-map-marker-alt"></i> London, United Kingdom
+              <i class="fas fa-map-marker-alt"></i> Bordeaux, France
             </div>
             <div class="bio">
-              <div>💻 Sharing my developer journey & love of tech</div>
-              <div>👨🏻‍🔬 Physics Graduate & Tech Enthusiast</div>
+              <div>Diplômée du Collège Ostéopathique de Bordeaux</div>
+              <div>Agréée par le ministère de la Santé</div>
             </div>
           </div>
           <div class="links">
-            <a href="mailto:hello@example.com" class="contactbutton">
+            <a href="mailto:bp.osteopathie@gmail.com" class="contactbutton">
               <i class="fas fa-envelope-open"></i> Email
             </a>
           </div>
         </div>
-        <a href="https://instagram.com/alexhyettdev" class="block link">
-          <div class="image-float instagram">
-            <div class="beacon instagram"></div>
+        <a href="https://www.doctolib.fr/osteopathe/merignac/beatrice-stadler" class="block link">
+          <div class="image-float doctolib">
+            <div class="beacon doctolib"></div>
             <div class="image">
-              <img src="images/instagram.svg" />
+              <img src="images/doctolib.png" />
             </div>
           </div>
           <div>
-            <h2>Instagram</h2>
-            <div>@alexhyettdev</div>
+            <h2>Doctolib</h2>
+            <div>Prendre rendez-vous à Mérignac (Remplacement Béatrice Stadler)</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
           </div>
         </a>
 
-        <a href="https://twitter.com/alexhyettdev" class="block link">
-          <div class="image-float twitter">
+        <a href="https://www.doctolib.fr/osteopathe/bordeaux/clement-dorignac" class="block link">
+          <div class="image-float doctolib">
+            <div class="beacon doctolib"></div>
             <div class="image">
-              <img src="images/twitter.svg" />
+              <img src="images/doctolib.png" />
             </div>
           </div>
           <div>
-            <h2>Twitter</h2>
-            <div>@alexhyettdev</div>
+            <h2>Doctolib</h2>
+            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Remplacement Clément Dorignac)</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
           </div>
         </a>
 
-        <a href="https://alexhyett.medium.com/" class="block link">
-          <div class="image-float medium">
+        <a href="https://www.doctolib.fr/osteopathe/bordeaux/laurent-maria" class="block link">
+          <div class="image-float doctolib">
+            <div class="beacon doctolib"></div>
             <div class="image">
-              <img src="images/medium.svg" />
+              <img src="images/doctolib.png" />
             </div>
           </div>
           <div>
-            <h2>Medium</h2>
-            <div>alexhyett.medium.com</div>
+            <h2>Doctolib</h2>
+            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Remplacement Laurent Maria)</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
           </div>
         </a>
 
-        <a href="https://github.com/alexhyett/" class="block link">
-          <div class="image-float github">
-            <div class="image">
-              <img src="images/github.svg" />
-            </div>
-          </div>
-          <div>
-            <h2>GitHub</h2>
-            <div>github.com/alexhyett</div>
-          </div>
-          <div class="arrow">
-            <i class="fas fa-arrow-right"></i>
-          </div>
-        </a>
 
-        <a href="https://dev.to/alexhyettdev" class="block link">
-          <div class="image-float dev">
-            <div class="image">
-              <img src="images/dev.png" />
-            </div>
-          </div>
-          <div>
-            <h2>DEV</h2>
-            <div>dev.to/alexhyettdev</div>
-          </div>
-          <div class="arrow">
-            <i class="fas fa-arrow-right"></i>
-          </div>
-        </a>
 
-        <a href="https://www.linkedin.com/in/alexhyett/" class="block link">
-          <div class="image-float linkedin">
-            <div class="image">
-              <img src="images/linkedin.svg" />
-            </div>
-          </div>
-          <div>
-            <h2>LinkedIn</h2>
-            <div>linkedin.com/in/alexhyett</div>
-          </div>
-          <div class="arrow">
-            <i class="fas fa-arrow-right"></i>
-          </div>
-        </a>
+
       </div>
     </div>
   </body>
