--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div class="block">
           <div class="profile">
             <img src="images/profile.jpg" alt="profile photo" />
-            <h1>Barbara Populaire | Ostéopathe D.O</h1>
+            <h1>Barbara Populaire</h1>
+            <h1>Ostéopathe D.O</h1>
             <div class="location">
               <i class="fas fa-map-marker-alt"></i> Bordeaux, France
             </div>
@@ -45,7 +46,7 @@
           </div>
           <div>
             <h2>Doctolib</h2>
-            <div>Prendre rendez-vous à Mérignac (Remplacement Béatrice Stadler)</div>
+            <div>Prendre rendez-vous à Mérignac (Collaboratrice de Béatrice Stadler)</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
@@ -61,7 +62,7 @@
           </div>
           <div>
             <h2>Doctolib</h2>
-            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Remplacement Clément Dorignac)</div>
+            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Remplacement de Clément Dorignac)</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
@@ -77,7 +78,7 @@
           </div>
           <div>
             <h2>Doctolib</h2>
-            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Remplacement Laurent Maria)</div>
+            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Remplacement de Laurent Maria)</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
