--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     />
     <title>Barbara Populaire - Ostéopathe</title>
     <meta name="description" content="Ostéopathe à Bordeaux" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/site.webmanifest">
     <script
       src="https://kit.fontawesome.com/9b3bbb804d.js"
       crossorigin="anonymous"
