add new doctolib link + reorg

--- a/index.html
+++ b/index.html
@@ -35,29 +35,15 @@
               <div>Agréée par le ministère de la Santé</div>
             </div>
           </div>
+
           <div class="links">
             <a href="mailto:bp.osteopathie@gmail.com" class="contactbutton">
               <i class="fas fa-envelope-open"></i> Email
             </a>
           </div>
         </div>
-        <a href="https://www.doctolib.fr/osteopathe/merignac/beatrice-stadler" class="block link">
-          <div class="image-float doctolib">
-            <div class="beacon doctolib"></div>
-            <div class="image">
-              <img src="images/doctolib.png" />
-            </div>
-          </div>
-          <div>
-            <h2>Doctolib</h2>
-            <div>Prendre rendez-vous à Mérignac (Collaboratrice de Béatrice Stadler)</div>
-          </div>
-          <div class="arrow">
-            <i class="fas fa-arrow-right"></i>
-          </div>
-        </a>
 
-        <a href="https://www.doctolib.fr/osteopathe/bordeaux/clement-dorignac" class="block link">
+        <a href="https://www.doctolib.fr/osteopathe/bordeaux/barbara-populaire" class="block link">
           <div class="image-float doctolib">
             <div class="beacon doctolib"></div>
             <div class="image">
@@ -66,7 +52,7 @@
           </div>
           <div>
             <h2>Doctolib</h2>
-            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Remplacement de Clément Dorignac)</div>
+            <div>Prendre rendez-vous à l'Espace Santé Chartrons</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
@@ -82,7 +68,39 @@
           </div>
           <div>
             <h2>Doctolib</h2>
-            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Remplacement de Laurent Maria)</div>
+            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Collaboratrice de Laurent Maria)</div>
+          </div>
+          <div class="arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </a>
+
+        <a href="https://www.doctolib.fr/osteopathe/bordeaux/clement-dorignac" class="block link">
+          <div class="image-float doctolib">
+            <div class="beacon doctolib"></div>
+            <div class="image">
+              <img src="images/doctolib.png" />
+            </div>
+          </div>
+          <div>
+            <h2>Doctolib</h2>
+            <div>Prendre rendez-vous à l'Espace Santé Chartrons (Collaboratrice de Clément Dorignac)</div>
+          </div>
+          <div class="arrow">
+            <i class="fas fa-arrow-right"></i>
+          </div>
+        </a>
+
+        <a href="https://www.doctolib.fr/osteopathe/merignac/beatrice-stadler" class="block link">
+          <div class="image-float doctolib">
+            <div class="beacon doctolib"></div>
+            <div class="image">
+              <img src="images/doctolib.png" />
+            </div>
+          </div>
+          <div>
+            <h2>Doctolib</h2>
+            <div>Prendre rendez-vous à Mérignac (Collaboratrice de Béatrice Stadler)</div>
           </div>
           <div class="arrow">
             <i class="fas fa-arrow-right"></i>
